# Vision

./: .dockerignore  .env  .env.example  README.md  alembic.ini  docker-manage.sh  pyproject.toml
docker/: Dockerfile  docker-compose.yml  servers.json
src/: config.py  database.py  main.py  routers.py
src/alembic/: env.py
src/alembic/versions/: 68ca02cca2d1_add_productvalue_relationship_to_.py  7dbe9ce6479b_add_sku_and_title_columns_safely.py  7e9eeb679f0b_create_attributes_and_product_values_.py  9333f67d9d37_add_labels_to_family_table.py  9cac49144ad4_add_attributes_and_update_foreign_keys.py  da9c221966f6_initial_migration_with_product_models.py  ee1c19f9e51d_add_attributes_tabel.py
src/endpoints/: attribute_options.py  attributes.py  categories.py  families.py  products.py
src/enums/: enum.py
src/model/: __init__.py  attributes.py  family.py  family_variants.py  parent_product.py  product.py  product_values.py
src/schemas/: attribute.py  family.py  product_model.py
