[tool.poetry]
name = "vision"
version = "1.0.0"
description = ""
authors = ["MahmoudJad"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.118.1"
uvicorn = {extras = ["standard"], version = "0.23.2"}
sqlalchemy = "2.0.20"
pydantic = "2.10.3"
pydantic-settings = "2.0.3"
httpx = "0.27.0"
httpx-retry = "2025.4.23"
psycopg2-binary = "2.9.7"
asyncpg = "0.29.0"
alembic = "1.12.0"
pre-commit = "3.4.0"
pytest = "7.4.2"
pytest-cov = "4.1.0"
pytest-asyncio = "0.23.6"
mixer = "7.2.2"
pyjwt = "2.8.0"
pandas = "2.3.1"
python-multipart = "0.0.20"
openpyxl = "3.1.5"
python-json-logger = "3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
